trying to fix overlap problem

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,7 +61,6 @@ a:hover small {
 }
 
 .wrapper {
-  display:block;
   width:100%;
   margin:0 auto;
 }
@@ -130,7 +129,7 @@ section {
   width:100vw;
   float:center;
   padding-bottom:50px;
-  margin=15%;
+  margin=0 15%;
 }
 
 small {
@@ -230,7 +229,6 @@ footer {
 
 /* Farouk: stylization of the side bar*/
 .side-bar{
-  display:block;
   width: 15%;
   height: 100%;
   background: #854700;
@@ -280,5 +278,5 @@ footer {
   width:70%;
   background:#c0c0c0;
   text-align:center;
-  margin:15%
+  margin:0 15%;
 }
